# GPT-SoVITS

./: .gitignore  Cargo.toml  README.md  android.md  build_for_android.sh  perf.md  perf_aarch64.md
desktop/: Cargo.toml  main.rs
mobile/: Cargo.toml  app.jks  build.rs  main.rs  run.bat
mobile/.cargo/: config.toml
scripts/: README.md  run_onnxsim.sh  run_onnxslim.sh  run_opt.sh  update_op_and_quant.py
src/: error.rs  lib.rs  phoneme.rs
