[package]
name = "gpt-sovits"
version = "0.1.0"
edition = "2021"

[workspace]
dependencies.anyhow = "1.0.95"
members = ["desktop", "mobile"]
resolver = "2"

[dependencies]
arpabet = "2.0.0"
jieba-rs = "0.7.2"
ndarray = "0.16.1"
ort = "2.0.0-rc.9"
pinyin = "0.10.0"
rodio = { version = "0.20.1", default-features = false, features = ["cpal-shared-stdcxx", "mp3"] }
log = "0.4.25"
