[package]
name = "gpt-sovits"
version = "0.1.0"
edition = "2021"

[workspace]
dependencies.anyhow = "1.0.95"
members = ["desktop", "mobile"]
resolver = "2"

[dependencies]
arpabet = "2.0.0"
jieba-rs = "0.7.2"
ndarray = "0.16.1"
ort = {version = "2.0.0-rc.9", features = ["ndarray","download-binaries","copy-dylibs", "half"]}
pinyin = "0.10.0"
log = "0.4.25"
hound = "3.5.1"
