[package]
name = "gpt-sovits-mobile"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
apk_name = "gpt-sovits"
use_aapt2 = true
runtime_libs = "libs"

[package.metadata.android.signing.release]
path = "app.jks"
keystore_password = "123456"

[lib]
path = "main.rs"
crate-type = ["cdylib"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
mobile-entry-point = "0.1.1"

[dependencies.gpt-sovits]
path = ".."

[build-dependencies]
cargo-emit = "0.2.1"